Address code review feedback - use toList() and add configuration comments
Co-authored-by: Vicente-jpro <70174120+Vicente-jpro@users.noreply.github.com>